// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReduxFormCheckbox /> renders checked correctly 1`] = `
<div
  className="pgn__form-group"
>
  <div
    className="form-check"
  >
    <input
      checked={true}
      className="form-check-input position-static"
      defaultChecked={false}
      disabled={false}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`<ReduxFormCheckbox /> renders unchecked correctly 1`] = `
<div
  className="pgn__form-group"
>
  <div
    className="form-check"
  >
    <input
      checked={false}
      className="form-check-input position-static"
      defaultChecked={false}
      disabled={false}
      type="checkbox"
    />
  </div>
</div>
`;
